# model/request/admin.go
@@ -1,10 +1,12 @@
 package request
 
+// AdminLoginReq 登陆请求
 type AdminLoginReq struct {
 	Username string `json:"username" binding:"required"`
 	Password string `json:"password" binding:"required"`
 }
 
+// AdminRegisterReq 注册请求
 type AdminRegisterReq struct {
 	Username string `json:"username" binding:"required"`
 	Password string `json:"password" binding:"required"`
