# model/role.go
@@ -2,6 +2,6 @@ package model
 
 // Role 定义角色结构体
 type Role struct {
-	Id   int    `json:"id"`
-	Name string `json:"name"`
+	Id       int    `json:"id" db:"id"`
+	RoleName string `json:"role_name" db:"role_name"`
 }
